--- a/style.css
+++ b/style.css
@@ -25,6 +25,14 @@ body {
     background-color: #fff;
     border-radius: 8px;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    min-height: 350px;
+
+}
+
+.img-wrapper {
+    width: 100%;
+    height: 350px;
+    overflow: hidden;
 }
 
 .portfolio-container{
@@ -33,15 +41,10 @@ body {
     padding: 0 20px;
     display: grid;
     grid-template-columns: repeat(auto-fill, minmax(280px, 1fr));
-    grid-gap: 20px;
-}
-.card__img{
-    width: 100%;
-    height: 200px;
-    object-fit: cover;
-    display: block;
+    grid-gap: 50px 25px;
 }
 .card-content{
+    flex-grow: 1;
     padding: 15px;
 }
 .card__title{
@@ -65,6 +68,13 @@ body {
     align-items: center;
     justify-content: center;
 }
+.card-img{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    display: block;
+    
+}
 
 .modal-active{
     display: flex;
@@ -77,6 +87,8 @@ body {
     max-width: 600px;
     width: 90%;
     position: relative;
+    height: 300px;
+    
 }
 .close-button{
     position: absolute;
